0.6.4.4
Add -usePublicWebBaseUrl to Get-TestsFromBcContainer and Run-TestsInBcContainer to use the public Web Base Url instead of localhost

0.6.4.3
RestoreApps would install empty apps if ShowMyCode was false. Now it will grab the apps from \Applications
Fix issue #627
Flush-ContainerHelperCache didn't remove all applications folders

0.6.4.2
Support WebClientPort in Get-Tests / Run-Tests (Issue #617)
Support ReplaceDependencies on functions when publishing apps to containers with custom BaseApp
Issue #616 add PreserveFormatting
Issue #622 wrong variable passed in Get-BCContainerAppRuntimePackage
Added function Replace-DependenciesInAppFile to replace dependencies to f.ex. BaseApp with custom BaseApp
Add parameter APIVersion to Get-BCContainerApiCompanyId
Add silent to Get-BCContainerApiCompanyId and Invoke-BCContainerApi
Add InFile to Invoke-BCContainerApi in order to transfer files
Add parameter EnableTaskScheduler to New-BCContainer
Add parameter useNewDatabase to New-BCContainer, Publish-NewApplicationToBcContainer and Clean-BcContainerDatabase to create new DB instead of cleaning the existing
Allow TestToolkit and apps to be installed in tenant scope and/or using the dev endpoint

0.6.4.1
Add parameter finalizeDatabasesScriptBlock to New-BcContainer

Cleanup help for functions
Add more debugging info to Get-/Run-Tests when using -DebugMode
New function Restore-DatabasesInBcContainer
Cannot find txt2al in latest 15.x container
Add parameter doNotUseRuntimePackages to New-BcContainer
Ignore empty runtime packages when caching runtime test apps
Add credential parameter to Create-AlProjectFolderFromBcContainer
Add support for relative bakfolders in Backup/Restore
Add parameter bakFolder to New-BcContainer to store and reuse database
Rename application runtime cache to sandbox-applications or onprem-applications based on style
Add parameter -ignoreGroups to Get-TestsFromBcContainer to allow compatible output with 15.x containers (where groups are not supported)