@@ -1,5 +1,6 @@
 0.6.4.4
 Add -usePublicWebBaseUrl to Get-TestsFromBcContainer and Run-TestsInBcContainer to use the public Web Base Url instead of localhost
+Added function Sort-AppFoldersByDependencies
 
 0.6.4.3
 RestoreApps would install empty apps if ShowMyCode was false. Now it will grab the apps from \Applications
